bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q4 (Optimized, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]) AS product, ENC_PT(first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]) AS label, ENC_PT(first_value(propertyTextual) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]) AS propertyTextual
  Limit: skip=5, fetch=10
    Sort: AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST, fetch=15
      Aggregate: groupBy=[[__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))), product, propertyTextual]], aggr=[[first_value(product) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST] AS first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST], first_value(label) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST] AS first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST], first_value(propertyTextual) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST] AS first_value(propertyTextual) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]]]
        Projection: AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) AS __common_expr_1, product, label, propertyTextual
          Sort: AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST
            Union
              BasicGraphPattern: projection=[product, label, propertyTextual], filters=[EBV(GT(ENC_TF(ENC_PT(p1)), Union 4:4:457)) AS EBV(GT(ENC_TF(ENC_PT(p1)),ENC_TF(Struct({term_type:2,value:457,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))]
                QuadPattern: triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label]
                QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType138>]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4305>]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1427>]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual1> ?propertyTextual]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?p1]
              BasicGraphPattern: projection=[product, label, propertyTextual], filters=[EBV(GT(ENC_TF(ENC_PT(p2)), Union 4:4:488)) AS EBV(GT(ENC_TF(ENC_PT(p2)),ENC_TF(Struct({term_type:2,value:488,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))]
                QuadPattern: triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label]
                QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType138>]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4305>]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1444>]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual1> ?propertyTextual]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?p2]
