bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q5 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(first_value(product) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST]@2) as product, ENC_PT(first_value(productLabel) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST]@3) as productLabel]
  SortExec: TopK(fetch=5), expr=[ENC_SORT(ENC_TF(ENC_PT(productLabel)))@0 ASC, product@1 ASC], preserve_partitioning=[false], sort_prefix=[ENC_SORT(ENC_TF(ENC_PT(productLabel)))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as ENC_SORT(ENC_TF(ENC_PT(productLabel))), product@1 as product], aggr=[first_value(product) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(productLabel) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[ENC_SORT(ENC_TF(ENC_PT(productLabel@1))) as __common_expr_1, product@0 as product, productLabel@1 as productLabel]
        SortExec: expr=[ENC_SORT(ENC_TF(ENC_PT(productLabel@1))) ASC], preserve_partitioning=[false]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], filter=EBV(LT(ENC_TF(simProperty2@1), ADD(ENC_TF(origProperty2@0), 4:4:170))) AND EBV(GT(ENC_TF(simProperty2@1), SUB(ENC_TF(origProperty2@0), 4:4:170))), projection=[product@0, productLabel@1]
            CrossJoinExec
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], filter=EBV(LT(ENC_TF(simProperty1@1), ADD(ENC_TF(origProperty1@0), 4:4:120))) AND EBV(GT(ENC_TF(simProperty1@1), SUB(ENC_TF(origProperty1@0), 4:4:120))), projection=[product@0, productLabel@1]
                CrossJoinExec
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(prodFeature@2, prodFeature@1), (product@0, product@0)], projection=[product@0, productLabel@1]
                    CrossJoinExec
                      FilterExec: product@0 != <object id>
                        DataSourceExec: [GPOS] subject=?product, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?productLabel
                      DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=?prodFeature
                    FilterExec: product@0 != <object id>
                      DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=?prodFeature, additional_filters=[DynamicFilter [ Generation 2; Cannot obtain current predicate expr. ]]
                  DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>, object=?origProperty1
                FilterExec: product@0 != <object id>
                  DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>, object=?simProperty1, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
              DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2>, object=?origProperty2
            FilterExec: product@0 != <object id>
              DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2>, object=?simProperty2, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
