bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q5 (Execution Plan, Object ID).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(first_value(product) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST]@2) as product, ENC_PT(first_value(productLabel) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST]@3) as productLabel]
  SortExec: TopK(fetch=5), expr=[ENC_SORT(ENC_TF(ENC_PT(productLabel)))@0 ASC, product@1 ASC], preserve_partitioning=[false], sort_prefix=[ENC_SORT(ENC_TF(ENC_PT(productLabel)))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as ENC_SORT(ENC_TF(ENC_PT(productLabel))), product@1 as product], aggr=[first_value(product) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(productLabel) ORDER BY [ENC_SORT(ENC_TF(ENC_PT(productLabel))) ASC NULLS FIRST, product ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[ENC_SORT(ENC_TF(ENC_PT(productLabel@1))) as __common_expr_1, product@0 as product, productLabel@1 as productLabel]
        SortExec: expr=[ENC_SORT(ENC_TF(ENC_PT(productLabel@1))) ASC], preserve_partitioning=[false]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], filter=EBV(LT(ENC_TF(simProperty2@1), ADD(ENC_TF(origProperty2@0), 4:4:170))) AND EBV(GT(ENC_TF(simProperty2@1), SUB(ENC_TF(origProperty2@0), 4:4:170))), projection=[product@0, productLabel@1]
            CrossJoinExec
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], filter=EBV(LT(ENC_TF(simProperty1@1), ADD(ENC_TF(origProperty1@0), 4:4:120))) AND EBV(GT(ENC_TF(simProperty1@1), SUB(ENC_TF(origProperty1@0), 4:4:120))), projection=[product@0, productLabel@1]
                CrossJoinExec
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(prodFeature@2, prodFeature@1), (product@0, product@0)], projection=[product@0, productLabel@1]
                    CrossJoinExec
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?productLabel], blank_node_mode=Variable, pushed_filters=[product@0 != 23114]
                      DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?prodFeature], blank_node_mode=Variable
                    FilterExec: DynamicFilter [ prodFeature@1 >= 192 AND prodFeature@1 <= 9806 AND product@0 >= 0 AND product@0 <= 82565 AND hash_lookup ]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?prodFeature], blank_node_mode=Variable, pushed_filters=[product@0 != 23114, DynamicFilter [ prodFeature@1 >= 192 AND prodFeature@1 <= 9806 AND product@0 >= 0 AND product@0 <= 82565 AND hash_lookup ]]
                  DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?origProperty1], blank_node_mode=Variable
                FilterExec: DynamicFilter [ product@0 >= 14688 AND product@0 <= 23227 AND hash_lookup ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?simProperty1], blank_node_mode=Variable, pushed_filters=[product@0 != 23114, DynamicFilter [ product@0 >= 14688 AND product@0 <= 23227 AND hash_lookup ]]
              DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?origProperty2], blank_node_mode=Variable
            FilterExec: DynamicFilter [ product@0 >= 14822 AND product@0 <= 23211 AND product@0 IN (SET) ([23062, 19304, 19304, 19304, 19304, 19304, 19304, 19295, 19295, 17238, 17211, 17211, 19262, 19262, 19407, 17183, 17183, 23211, 14822, 14822, 21325, 17273, 17273]) ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?simProperty2], blank_node_mode=Variable, pushed_filters=[product@0 != 23114, DynamicFilter [ product@0 >= 14822 AND product@0 <= 23211 AND product@0 IN (SET) ([23062, 19304, 19304, 19304, 19304, 19304, 19304, 19295, 19295, 17238, 17211, 17211, 19262, 19262, 19407, 17183, 17183, 23211, 14822, 14822, 21325, 17273, 17273]) ]]
