bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q5 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST]@2 as product, first_value(productLabel) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST]@3 as productLabel]
  SortExec: TopK(fetch=5), expr=[AS_SORTABLE_BYTES(ENC_TF(productLabel))@0 ASC, product@1 ASC], preserve_partitioning=[false], sort_prefix=[AS_SORTABLE_BYTES(ENC_TF(productLabel))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as AS_SORTABLE_BYTES(ENC_TF(productLabel)), product@1 as product], aggr=[first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(productLabel) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[AS_SORTABLE_BYTES(ENC_TF(productLabel@1)) as __common_expr_1, product@0 as product, productLabel@1 as productLabel]
        SortExec: expr=[AS_SORTABLE_BYTES(ENC_TF(productLabel@1)) ASC], preserve_partitioning=[false]
          ProjectionExec: expr=[product@0 as product, productLabel@3 as productLabel]
            DecodeObjectIdsExec: projections=[product, simProperty1, simProperty2, decode(productLabel) as productLabel, origProperty1, origProperty2]
              NestedLoopJoinExec: join_type=Inner, filter=EBV(LT(join_proj_push_down_6@0, join_proj_push_down_8@2)) AND EBV(GT(join_proj_push_down_7@1, join_proj_push_down_9@3)), projection=[product@0, simProperty1@1, simProperty2@2, productLabel@3, origProperty1@4, origProperty2@7]
                ProjectionExec: expr=[product@0 as product, simProperty1@1 as simProperty1, simProperty2@2 as simProperty2, productLabel@3 as productLabel, origProperty1@4 as origProperty1, ENC_TF(simProperty2@2) as join_proj_push_down_6, ENC_TF(simProperty2@2) as join_proj_push_down_7]
                  DecodeObjectIdsExec: projections=[product, simProperty1, decode(simProperty2) as simProperty2, productLabel, origProperty1]
                    NestedLoopJoinExec: join_type=Inner, filter=join_proj_push_down_1@0 AND EBV(LT(join_proj_push_down_2@1, join_proj_push_down_4@3)) AND EBV(GT(join_proj_push_down_3@2, join_proj_push_down_5@4)), projection=[product@0, simProperty1@1, simProperty2@2, productLabel@3, origProperty1@7]
                      ProjectionExec: expr=[product@0 as product, simProperty1@1 as simProperty1, simProperty2@2 as simProperty2, productLabel@3 as productLabel, NOT EBV(EQ(1:0:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890, ENC_TF(product@0))) as join_proj_push_down_1, ENC_TF(simProperty1@1) as join_proj_push_down_2, ENC_TF(simProperty1@1) as join_proj_push_down_3]
                        DecodeObjectIdsExec: projections=[decode(product) as product, decode(simProperty1) as simProperty1, simProperty2, productLabel]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, simProperty1@1, simProperty2@2, productLabel@4]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, simProperty1@1, simProperty2@3]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, simProperty1@2]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(prodFeature@0, prodFeature@1)], projection=[product@1]
                                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?prodFeature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.parquet]]}, projection=[object@3 as prodFeature], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 23114 AND predicate@2 = 14913, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 23114 AND 23114 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14913 AND 14913 <= predicate_max@6, required_guarantees=[predicate in (14913), subject in (23114)]
                                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?prodFeature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet]]}, projection=[subject@1 as product, object@3 as prodFeature], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2, required_guarantees=[predicate in (14913)]
                                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?simProperty1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet]]}, projection=[subject@1 as product, object@3 as simProperty1], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14905 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14905 AND 14905 <= predicate_max@2, required_guarantees=[predicate in (14905)]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?simProperty2], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet]]}, projection=[subject@1 as product, object@3 as simProperty2], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14906 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14906 AND 14906 <= predicate_max@2, required_guarantees=[predicate in (14906)]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?productLabel], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet]]}, projection=[subject@1 as product, object@3 as productLabel], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
                      ProjectionExec: expr=[origProperty1@0 as origProperty1, ADD(ENC_TF(origProperty1@0), 4:4:120) as join_proj_push_down_4, SUB(ENC_TF(origProperty1@0), 4:4:120) as join_proj_push_down_5]
                        DecodeObjectIdsExec: projections=[decode(origProperty1) as origProperty1]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?origProperty1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.parquet]]}, projection=[object@3 as origProperty1], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 23114 AND predicate@2 = 14905, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 23114 AND 23114 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14905 AND 14905 <= predicate_max@6, required_guarantees=[predicate in (14905), subject in (23114)]
                ProjectionExec: expr=[origProperty2@0 as origProperty2, ADD(ENC_TF(origProperty2@0), 4:4:170) as join_proj_push_down_8, SUB(ENC_TF(origProperty2@0), 4:4:170) as join_proj_push_down_9]
                  DecodeObjectIdsExec: projections=[decode(origProperty2) as origProperty2]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?origProperty2], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.parquet]]}, projection=[object@3 as origProperty2], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 23114 AND predicate@2 = 14906, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 23114 AND 23114 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14906 AND 14906 <= predicate_max@6, required_guarantees=[predicate in (14906), subject in (23114)]
